# image-generation-mcp

./: .dockerignore  .env.example  .gitignore  AI_IMAGE_MODELS_COMPARISON.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-run.sh  mcp_config.json  pyproject.toml  quick_test.py  start.sh  test_aspect_ratio.py  test_budget_premium_models.py  test_format_fixes.py  test_mcp_client.py  test_photorealistic_with_text.py  test_replicate_aspect_ratios.py  test_text_generation.py
deployment/: install-service.sh  mcp-image-server.service  setup-supervisor.sh  supervisor.conf
mcp_image_server/: __init__.py  demo_generation.py  server.py  test_image.py
mcp_image_server/config/: config.yaml
mcp_image_server/config/models/: config.yaml
mcp_image_server/core/: cache.py  utils.py
mcp_image_server/providers/: base.py  eden_ai.py  replicate.py
